<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="brand">Ho.La. URV</string>
    <string name="cd_brand">Logo Ho.La. URV</string>
    <string name="username">"Nom d'usuari"</string>
    <string name="password">Contrasenya</string>
    <string name="login">Inicia la sessió</string>
    <string name="alert_empty_credentials">Falten credencials!</string>
    <string name="alert_wrong_credentials">Credentials incorrectes!</string>
    <string name="alert_no_network">No hi ha connexió de xarxa disponible!</string>
    <string name="alert_connection_problem">Error de connexió al servidor!</string>
    <string name="accumulated">Acumulat</string>
    <string name="monday">Dilluns</string>
    <string name="tuesday">Dimarts</string>
    <string name="wednesday">Dimecres</string>
    <string name="thursday">Dijous</string>
    <string name="friday">Divendres</string>
    <string name="saturday">Dissabte</string>
    <string name="sunday">Diumenge</string>
    <string name="info_loading_data">Carregant dades&#8230;</string>
    <string name="entry">Entrada</string>
    <string name="exit">Sortida</string>
    <string name="menu_item_about">Sobre</string>
    <string name="menu_item_report">Informe setmanal</string>
    <string name="about_idea">Una idea de Robert Boloc &amp; Nur Ortega</string>
    <string name="about_robert">http://robertboloc.eu</string>
    <string name="about_nur">http://esnur.eu</string>
    <string name="about_version">v1.3.0 Cuba Libre (6)</string>
    <string name="report_table_empty_balance">00:00</string>
    <string name="report_table_empty_entry">-</string>
    <string name="report_table_header_day">Dia</string>
    <string name="report_table_header_theoretical">Teòric</string>
    <string name="report_table_header_real">Real</string>
    <string name="report_table_header_balance">Saldo</string>
</resources>