<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/urvWhite" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_brand"
            android:src="@drawable/ic_launcher" />
            
        <TextView
            android:id="@+id/aboutBrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:textColor="@color/urvPink"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_idea"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/urvBlack" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/about_robert"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/urvPink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/about_nur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColorLink="@color/urvPink" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/about_version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/urvGray" />

    </LinearLayout>

</RelativeLayout>